	  Added cob_module_free so that structure gets freed within libcob
	* fileio.c:
	  Added new routines cob_file_external_addr,cob_file_malloc
	  & cob_file_free so that 'cob_file' is allocated within libcob
	  This will allow the stucture have fields added to the end
	  without forcing a recompile. COB_FILE_VERSION is unchanged
	  with this commit but will be updated with the next.

2017-02-01  Ron Norman <rjn@inglenet.com>
	* common.c,common.h:
	  Corrections to routines for handling -ftrace, -ftraceall & -fdump=ALL

2017-01-30  Ron Norman <rjn@inglenet.com>
	* termio.c:
	  For -fdump=ALL,IO; Dump FILE STATUS value

2017-01-25  Ron Norman <rjn@inglenet.com>
	* common.c,common.h,coblocal.h,termio.c:
	  New routines for handling -ftrace, -ftraceall & -fdump=ALL
	  -fdump= causes code to be generated that will dump out data
	  variables in the event of a program abort or abnormal end
	  New runtime.cfg/env-vars: 
	      COB_DUMP_FILE, COB_DUMP_FORMAT, COB_DUMP_WIDTH
	  The old trace routines have been kept for backward compatible

2017-01-18  Ron Norman <rjn@inglenet.com>
	* call.c:
	  In cob_get_param_type added check for COB_FIELD_REAL_BINARY

2017-01-17  Ron Norman <rjn@inglenet.com>
	* call.c:
	  Added code to handle default data field types by using cob_move
	* move.c:
	  Added missing cob_put_s64_compx routine

2017-01-10  Ron Norman <rjn@inglenet.com>
	* move.c, call.c, common.h:
	  New routines added to provide application C code access to
	  COBOL data fields.

2017-01-01  Ron Norman <rjn@inglenet.com>
	* fileio.c:
	  Fix coding error in cob_fork_fileio. 
	  Moved call to bdb_join_environment to indexed_open.
	  Change to return 46 on 2nd read on an optional missing file.

2016-12-30  Ron Norman <rjn@inglenet.com>

	* fileio.c, common.h:
	  Complete work on BDB use of SHARING & RETRY
	  Problems solved by closing BDB cursor as soon/often as possible
	  as the BDB cursor seems to create some internal locks
	  Retry interval reduced to 100ms
