@@ -100,6 +100,13 @@
 	  without forcing a recompile. COB_FILE_VERSION is unchanged
 	  with this commit but will be updated with the next.
 
+2017-02-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c, common.h, call.c: [__MINGW32__] fixes for mixed printf
+	  format modifiers for long long
+	* common.c: [WIN32] check if PROCESS_QUERY_LIMITED_INFORMATION is
+	  actually defined (not the case for MINGW and old VC versions)
+
 2017-02-01  Ron Norman <rjn@inglenet.com>
 	* common.c,common.h:
 	  Corrections to routines for handling -ftrace, -ftraceall & -fdump=ALL
